tests/ext/invalid/IntDiv_Invalid_1.whiley
import whiley.lang.*:*

void f(int x, int y) requires y >= 0:
     x = x / y
